# Ava-Guardian

./: .gitignore  .pre-commit-config.yaml  .semgrep.yml  ARCHITECTURE.md  AVA_GUARDIAN_AUDIT_REPORT.md  AVA_GUARDIAN_ETHICAL_PILLARS.md  BENCHMARKS.md  BENCHMARKS_V1.md  BENCHMARK_RESULTS.md  BUILDING.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  COMPARATIVE_BENCHMARKS.md  COMPARATIVE_BENCHMARKS_FINAL.md  COMPLETION_REPORT.md  CONSTANT_TIME_VERIFICATION.md  CONTRIBUTING.md  CRYPTOGRAPHY.md  CRYPTO_PACKAGE.json  DELIVERY_SUMMARY.md  DEPLOYMENT.md  DNA_CRYPTO_PACKAGE.json  ENHANCED_FEATURES.md  IMPLEMENTATION_GUIDE.md  INSTITUTIONAL_PARTNERSHIP.md  MONITORING.md  Makefile  NOTICE  PRE_MERGE_CHECKLIST.md  README.md  README.txt  README_ENHANCED.md  REMEDIATION_PLAN.md  SECURITY.md  SECURITY_ANALYSIS.md  SECURITY_COMPARISON.md  SESSION_SUMMARY.md  SOCIAL_MEDIA_POST.md  (+18 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci-build-test.yml  ci.yml  security.yml
ava_guardian/: __init__.py  crypto_api.py  double_helix_engine.py  equations.py  exceptions.py  key_management.py  pqc_backends.py  rfc3161_timestamp.py  secure_memory.py
benchmarks/: __init__.py  baseline.json  benchmark_runner.py  benchmark_suite.py  comparative_benchmark.py  comparative_benchmark_results.json  generate_visualizations.py  performance_comparison.py  performance_suite.py  validation_suite.py
benchmarks/results/: benchmark_report.txt  benchmark_results.json
benchmarks/visualizations/: all_visualizations.md  architecture_diagram.md  comparison_chart.md  performance_table.md  security_grade.md  size_comparison.md  standards_compliance.md
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.c-api  docker-compose.yml
docs/: Doxyfile  conf.py  index.rst
examples/c/: CMakeLists.txt  pqc_demo.c  simple_example.c
examples/python/: basic_usage.py  complete_demo.py  fastapi_integration.py  flask_integration.py
include/: ava_guardian.h
src/c/: ava_consttime.c  ava_core.c  ava_ed25519.c  ava_hkdf.c  ava_kyber.c  ava_sha3.c
src/cython/: helix_engine_complete.pyx  math_engine.pyx
src/python/: key_management.py
src/python/ava_guardian/: __init__.py  crypto_api.py  double_helix_engine.py  equations.py  key_management.py  pqc_backends.py
tests/: __init__.py  conftest.py  test_ava_guardian_monitor.py  test_basic.py  test_code_quality_additions.py  test_comprehensive_system.py  test_crypto_api.py  test_crypto_core_penetration.py  test_crypto_import_paths.py  test_demonstration.py  test_dilithium_backend.py  test_double_helix_engine.py  test_equations.py  test_fuzzing.py  test_hkdf_sha3_256.py  test_integration_e2e.py  test_key_management_comprehensive.py  test_key_rotation.py  test_memory_security.py  test_nist_kat.py  test_performance.py  test_pqc_backends.py  test_pqc_backends_comprehensive.py  test_pqc_kat.py  test_secure_memory.py  test_smoke_import.py
tests/c/: CMakeLists.txt  test_benchmark.c  test_consttime.c  test_core.c  test_ed25519.c  test_hkdf.c  test_sha3.c
tools/: generate_visuals.py
tools/constant_time/: Makefile  dudect_harness.c
