[build-system]
requires = ["setuptools>=61.0", "wheel", "Cython>=0.29.30", "numpy>=1.21"]
build-backend = "setuptools.build_meta"

[project]
name = "ava-guardian"
version = "1.0.0"
description = "Quantum-resistant cryptographic protection system for helical mathematical DNA codes"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew E. A.", email = "steel.sa.llc@gmail.com"}
]
maintainers = [
    {name = "Steel Security Advisors LLC", email = "steel.sa.llc@gmail.com"}
]
keywords = [
    "cryptography",
    "quantum-resistant",
    "post-quantum-cryptography",
    "dilithium",
    "ed25519",
    "sha3",
    "hmac",
    "security",
    "integrity-protection",
    "digital-signatures"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed"
]
requires-python = ">=3.8"
dependencies = [
    "cryptography>=41.0.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
quantum = [
    # liboqs-python for quantum-resistant cryptography
    # The PyPI package is 'liboqs-python' (provides 'oqs' module)
    "liboqs-python>=0.10.0",
]
quantum-alt = [
    "pqcrypto>=0.1.3",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/Steel-SecAdv-LLC/Ava-Guardian"
Documentation = "https://github.com/Steel-SecAdv-LLC/Ava-Guardian/blob/main/README.md"
Repository = "https://github.com/Steel-SecAdv-LLC/Ava-Guardian"
Issues = "https://github.com/Steel-SecAdv-LLC/Ava-Guardian/issues"

# Black configuration
[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=. --cov-report=term-missing"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "quantum: marks tests that require quantum libraries",
]

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
