[metadata]
name = ava-guardian
version = 1.0.0
description = Quantum-resistant cryptographic protection system for helical mathematical DNA codes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Steel-SecAdv-LLC/Ava-Guardian
author = Andrew E. A.
author_email = steel.secadv.llc@outlook.com
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Security :: Cryptography

[options]
python_requires = >=3.8
install_requires =
    cryptography>=41.0.0

[options.extras_require]
quantum =
    # Pin liboqs-python to avoid version mismatch warnings with underlying liboqs C library
    liboqs-python>=0.8.0,<0.15.0
quantum-alt =
    # Alternative quantum library (pqcrypto) - pin for stability
    pqcrypto>=0.1.3,<0.2.0
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.0.0
    isort>=5.12.0

# Flake8 configuration
[flake8]
max-line-length = 100
max-complexity = 15
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .mypy_cache,
    .pytest_cache,
    .tox,
    # Exclude non-core directories from strict linting
    examples,
    benchmarks,
    src/python,
    src/cython
# E203: whitespace before ':'
# E501: line too long (handled by black)
# W503: line break before binary operator
ignore = E203, E501, W503
per-file-ignores =
    __init__.py:F401

# isort configuration
[isort]
profile = black
skip_glob =
    examples/*,
    benchmarks/*,
    src/python/*,
    src/cython/*
